--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@ant-design/icons": "^5.3.7",
     "antd": "^5.18.1",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
@@ -27,6 +29,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "faker": "^5.5.3",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.4",
